Revision history for Cache

0.06 in progress
 - major rewrite of the size aware cache logic
 - added the CacheMetaData class, which is used to efficiently keep track
   of a size aware cache state
 - refactored the instance specific limit_size routines into the
   generic Limit_Size method in CacheUtils
 - updated the size aware cache implementations to use the CacheMetaData
   and Limit_Size methods
 - improved the SizeAwareCacheTester and updated the test scripts
 - removed unnecessary clone call from the SharedMemoryCache and the
   SizeAwareSharedMemoryCache
 - added exclusive locking on the shared cache for operations that
   will both read and write to the cache
 - replaced the cache_hash_ref instance property in MemoryCache with
   a class property and updated the SharedMemoryCache and 
   SizeAwareSharedMemoryCache modules accordingly
 - started version 0.06

0.05 2000-03-20-10-25
 - released version 0.05
 - updated Storable dependency to 1.011
 - replaced the IPC::Shareable backend with IPC::ShareLite
 - started version 0.05

0.04 2000-03-17-10-43
 - released version 0.04
 - replaced Data::Dumper with Storable, which is now a requirement
 - implemented the SizeAwareMemoryCache and associated tests
 - implemented the SizeAwareSharedMemoryCache and associated tests
 - added the SizeAwareCache interface
 - moved max_size logic from the _store method to the set method
 - started version 0.04

0.03 2000-03-10-12-40
 - released version 0.03
 - made the FileCache more multi-user friendly by allowing a more
   permissive default directory umask, which can also be optionally 
   overridden
 - updated documentation and code style
 - completely rewrote and improved the limit_size method for a major
   performance gain
 - updated the syntax for expiration times to include the [number] [unit] 
   format, e.g. "10 seconds"
 - added the get_object method to the Cache interface, which allows
   access to the underlying cache object (without potentially expiring